# ExplodingKittens

./: LICENSE  README.md  deck.py  demo.ipynb  environment.yml  pyproject.toml  tox.ini
.github/workflows/: tests.yml
src/: cards.py  constants.py  deck.py  game.py
src/exploding_kittens/: __init__.py  cards.py  deck.py  demo.ipynb  game.py  player.py
tests/: test_cards.py  test_deck.py  test_game.py  test_player.py
