[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "exploding_kittens"
authors = [{name = "Vasilis Chrysanthou & Michalis Panayides"}]
home-page = "https://github.com/VasilisChrysanthou/ExplodingKittens"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
